syntax = "proto3";

option go_package = "/Users/louqiangqiang/Code/GoCode/basic-go/grpc";

message User {
  int64 id = 1;
  string name =2;
  // 编号可以不连续
  string avatar =4;

  map<string,string> attributes =5;
  repeated string nicknames = 6;

  optional int32 age =7;

  Address address = 8;

  oneof contacts {
    string email = 9;
    string phone = 10;
  }

  Gender gender = 11;
}

message Address {
  string province = 1;
  string city = 2;
}

enum Gender {
  Unknown = 0;
  Male = 1;
  Female = 2;
}


service UserService {
  rpc GetById(GetByIDRequest) returns (GetByIDResponse);
}

message GetByIDRequest {
  int64 id =1;
}

message GetByIDResponse {
  User user =1;

}